# isotools

./: .gitignore  LICENSE  pyproject.toml
isotools/: Cargo.toml
isotools/config/: Cargo.toml
isotools/config/assets/: generateAnnotationCommands.perl
isotools/config/src/: fns.rs  lib.rs  mods.rs
isotools/entry/: Cargo.toml
isotools/entry/src/: lib.rs  main.rs
isotools/iso-chimera/: Cargo.toml
isotools/iso-chimera/src/: cli.rs  core.rs  main.rs
isotools/iso-classify/: Cargo.toml
isotools/iso-classify/assets/: db.tsv  donor.tsv
isotools/iso-classify/src/: cli.rs  core.rs  lib.rs  main.rs  utils.rs
isotools/iso-cov/: Cargo.toml
isotools/iso-cov/src/: cli.rs  core.rs  main.rs
isotools/iso-fusion/: Cargo.toml
isotools/iso-fusion/src/: cli.rs  core.rs  lib.rs  main.rs  utils.rs
isotools/iso-intron/: Cargo.toml
isotools/iso-intron/src/: cli.rs  core.rs  lib.rs  main.rs  utils.rs
isotools/iso-nmd/: Cargo.toml
isotools/iso-nmd/src/: cli.rs  core.rs  lib.rs  main.rs
isotools/iso-orf/: Cargo.toml
isotools/iso-orf/src/: cli.rs  core.rs  main.rs
isotools/iso-pack/: Cargo.toml  README.md
isotools/iso-pack/src/: lib.rs  record.rs
isotools/iso-polya/: Cargo.toml
isotools/iso-polya/assets/: aparent.py  apparent.py  filterMinimapQuality.perl  pyproject.toml  run_aparent.py
isotools/iso-polya/assets/aparent/: predictor.py
isotools/iso-polya/src/: cli.rs  core.rs  lib.rs  main.rs  utils.rs
isotools/iso-polya/src/core/: apa.rs  filter.rs  pas.rs  segment.rs
isotools/iso-split/: Cargo.toml
isotools/iso-split/src/: cli.rs  lib.rs  main.rs
isotools/iso-utr/: Cargo.toml
isotools/iso-utr/src/: cli.rs  core.rs  lib.rs  main.rs  utils.rs
isotools/packbed/: Cargo.toml
isotools/packbed/packbed/: Cargo.toml
isotools/packbed/packbed/src/: lib.rs  main.rs  record.rs
isotools/packbed/py-packbed/src/: lib.rs
isotools/packbed/src/: lib.rs  main.rs  record.rs
