[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
dependencies = [
    "tensorflow >= 1.13.1",
    "keras >= 2.2.4",
    "scipy >= 1.2.1",
    "numpy >= 1.16.2",
]

name = "isotools"
version = "0.0.1"
description = "tools for long read transcriptomics"
license = { text = "MIT" }
authors = [
    { name = "Alejandro Gonzales-Irribarren", email = "alejandrxgzi@gmail.com" },
]
keywords = ["genomics", "bioinformatics", "polya"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
readme = "README.md"

[project.urls]
homepage = "https://github.com/alejandrogzi/pisco"
repository = "https://github.com/alejandrogzi/pisco"

[tool.ruff]
target-version = "py37"
exclude = [".venv"]

[tool.ruff.lint]
extend-select = [
    "B", # bugbear
    # "C",  # mccabe complexity
    # "D",  # pydocstyle
    "E",   # style errors
    "F",   # pyflakes
    "I",   # isort
    "RUF", # ruff-specific rules
    "UP",  # pyupgrade
    "W",   # style  warnings
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.hatch.envs.default]
path = ".env"

[tool.hatch.envs.default.scripts]
fix = "ruff check --fix ."
lint = "ruff check ."
format = "ruff format ."

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]

[tool.hatch.build.targets.wheel]
packages = ["isotools"]
