[workspace]
members = [
    "config",
    "iso-intron",
    "iso-utr",
    "iso-pack",
    "iso-fusion",
    "iso-cov",
    "iso-classify"
, "iso-orf", "iso-polya"]
resolver = "2"

[workspace.package]
authors = ["alejandrogzi <alejandrxgzi@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.70.0"

[workspace.dependencies]
dashmap = { version = "6", features = ["rayon"] }
clap = { version = "^4.0", features = ["derive"] }
rayon = "1.8.1"
num_cpus = "1.16.0"
hashbrown = { version = "0.15", features = ["rayon", "serde"] }
anyhow = "1.0.81"
serde = { version = "1.0.210", features = ["derive", "rc"] }
rand = "0.8.5"
log = "0.4.14"
config = { path = "config" }
simple_logger = "5.0.0"
thiserror = "2.0"
tempfile = "3.13.0"
serde_json = "1.0.133"
num-traits = "0.2.19"
bigtools = "0.5.4"
twobit = "0.2.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

