[workspace]
members = [
    "entry",
    "config",
    "iso-intron",
    "iso-utr",
    "iso-pack",
    "iso-fusion",
    "iso-cov",
    "iso-classify",
    "iso-orf",
    "iso-polya",
]
resolver = "2"

[workspace.package]
authors = ["alejandrogzi <alejandrxgzi@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.70.0"
version = "0.0.1"

[workspace.dependencies]
dashmap = { version = "6", features = ["rayon"] }
clap = { version = "^4.0", features = ["derive"] }
rayon = "1.8.1"
num_cpus = "1.16.0"
hashbrown = { version = "0.15", features = ["rayon", "serde"] }
anyhow = "1.0.81"
serde = { version = "1.0.210", features = ["derive", "rc"] }
rand = "0.8.5"
log = "0.4.14"
config = { path = "config" }
simple_logger = "5.0.0"
thiserror = "2.0"
tempfile = "3.13.0"
serde_json = "1.0.133"
num-traits = "0.2.19"
bigtools = "=0.5.4"
twobit = "0.2.1"
tokio = { version = "1.16", features = ["full"] }
lazy_static = "1.5.0"
bio = "2.3.0"
ndarray = "0.16.1"
noodles-bam = "0.79.0"
noodles-core = "0.17.0"
noodles-sam = "0.75.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
