[package]
name = "config"
version = "0.0.3"
edition = "2021"

[dependencies]
indicatif = "0.17.8"
dashmap.workspace = true
log.workspace = true
thiserror.workspace = true
serde_json.workspace = true
num-traits.workspace = true
serde.workspace = true
hashbrown.workspace = true
rayon.workspace = true
anyhow.workspace = true
rand.workspace = true
