[package]
name = "iso-intron"
version = "0.1.0"
edition = "2021"

[dependencies]
packbed = { path = "../packbed/packbed" }
config = { path = "../config" }
dashmap = { version = "5.5.3", features = ["rayon"] }
rayon = "1.8.1"
log = "0.4.14"
simple_logger = "4.3.3"
clap = { version = "4.5.3", features = ["derive"] }
num_cpus = "1.16.0"
hashbrown = { version = "0.14", features = ["rayon"] }
thiserror = "1.0"
anyhow = "1.0"

[profile.release]
lto = true
