[package]
name = "iso-intron"
version = "0.0.3"
authors = ["alejandrogzi <alejandrxgzi@gmail.com>"]
description = "detect intron retentions on iso-seq reads"
keywords = ["intron", "retention", "transcript", "isoseq"]
homepage = "https://github.com/alejandrogzi/isotools"
repository = "https://github.com/alejandrogzi/isotools"
categories = ["command-line-utilities", "science"]
license.workspace = true
edition.workspace = true

[dependencies]
iso-pack = { path = "../iso-pack" }
config.workspace = true
dashmap.workspace = true
rayon.workspace = true
log.workspace = true
clap.workspace = true
num_cpus.workspace = true
hashbrown.workspace = true
thiserror.workspace = true
anyhow.workspace = true
simple_logger.workspace = true
tempfile.workspace = true
