[package]
name = "iso-nmd"
version = "0.0.1"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
iso-pack = { path = "../iso-pack" }
config.workspace = true
dashmap.workspace = true
rayon.workspace = true
log.workspace = true
clap.workspace = true
num_cpus.workspace = true
hashbrown.workspace = true
simple_logger.workspace = true
serde_json.workspace = true
