[package]
name = "iso-pack"
version = "0.0.10"
authors = ["alejandrogzi <alejandrxgzi@gmail.com>"]
description = "pack a .bed into overlapping components"
keywords = ["components", "overlap", "transcript", "bed"]
readme = "README.md"
homepage = "https://github.com/alejandrogzi/isotools"
repository = "https://github.com/alejandrogzi/isotools"
categories = ["command-line-utilities", "science"]
license.workspace = true
edition.workspace = true

[dependencies]
dashmap.workspace = true
clap.workspace = true
rayon.workspace = true
num_cpus.workspace = true
hashbrown.workspace = true
anyhow.workspace = true
serde.workspace = true
rand.workspace = true
log.workspace = true
config.workspace = true
simple_logger.workspace = true

[lib]
name = "packbed"
path = "src/lib.rs"
