[package]
name = "iso-polya"
version = "0.0.4"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
iso-pack = { path = "../iso-pack" }
iso-classify = { path = "../iso-classify" }
iso-utr = { path = "../iso-utr" }
config.workspace = true
dashmap.workspace = true
rayon.workspace = true
log.workspace = true
clap.workspace = true
num_cpus.workspace = true
hashbrown.workspace = true
thiserror.workspace = true
anyhow.workspace = true
simple_logger.workspace = true
serde.workspace = true
twobit.workspace = true
bigtools.workspace = true
tokio.workspace = true
