[package]
name = "iso-utr"
version = "0.0.6"
authors = ["alejandrogzi <alejandrxgzi@gmail.com>"]
description = "detect UTR truncations on iso-seq reads"
keywords = ["utr", "truncation", "transcript", "isoseq"]
homepage = "https://github.com/alejandrogzi/isotools"
repository = "https://github.com/alejandrogzi/isotools"
categories = ["command-line-utilities", "science"]
license.workspace = true
edition.workspace = true

[dependencies]
iso-pack = { path = "../iso-pack" }
config.workspace = true
clap.workspace = true
log.workspace = true
simple_logger.workspace = true
num_cpus.workspace = true
rayon.workspace = true
anyhow.workspace = true
hashbrown.workspace = true
dashmap.workspace = true
tempfile.workspace = true
serde_json.workspace = true
