[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "aparent"
version = "0.0.1"
description = "Wrapper for APARENT"
license = { text = "MIT" }
authors = [
    { name = "Alejandro Gonzales-Irribarren", email = "alejandrxgzi@gmail.com" },
]
keywords = ["genomics", "bioinformatics", "polya"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
readme = "README.md"
dependencies = [
    "numpy>=1.10, <2",
    # "maturin",
    "aparent",
]

[project.urls]
homepage = "https://github.com/alejandrogzi/pisco"
repository = "https://github.com/alejandrogzi/pisco"

[tool.ruff]
target-version = "py37"
exclude = [".venv"]

[tool.ruff.lint]
extend-select = [
    "B", # bugbear
    # "C",  # mccabe complexity
    # "D",  # pydocstyle
    "E",   # style errors
    "F",   # pyflakes
    "I",   # isort
    "RUF", # ruff-specific rules
    "UP",  # pyupgrade
    "W",   # style  warnings
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
minversion = "7"
log_cli_level = "info"
xfail_strict = true
addopts = ["-ra", "--showlocals", "--strict-config", "--strict-markers"]
filterwarnings = ["ignore::PendingDeprecationWarning"]
testpaths = ["tests"]

[tool.hatch.envs.default]
path = ".env"

[tool.hatch.envs.default.scripts]
fix = "ruff check --fix ."
lint = "ruff check ."
format = "ruff format ."

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]
